# material2

./: cloudbuild.yml  package-lock.json  package.json  packages.bzl  vpublish.js
scripts/deploy/: publish-docs-content.sh
src/: README.md
src/lib/: BUILD.bazel  package.json  tsconfig-build.json
src/material-examples/: package.json  public-api.ts
src/material-examples/va-breadcrumbs-overview/: va-breadcrumbs-overview-example.html  va-breadcrumbs-overview-example.ts
src/material-examples/va-icon-overview/: va-icon-overview-example.html  va-icon-overview-example.ts
src/vendasta/icon/: icon.component.scss  icon.module.ts  public-api.ts  tsconfig-build.json
src/vendasta/va-breadcrumbs/: BUILD.bazel  CHANGELOG.md  breadcrumbs.component.scss  breadcrumbs.component.ts  breadcrumbs.module.ts  breadcrumbs.ts  public-api.ts  tsconfig-build.json  va-breadcrumbs.component.ts  va-breadcrumbs.md  va-breadcrumbs.module.ts
src/vendasta/va-icon/: BUILD.bazel  README.md  icon.component.ts  icon.md  public-api.ts
tools/dgeni/: index.ts
tools/gulp/tasks/: docs.ts  example-module.ts
