package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_library", "sass_binary")


ng_module(
  name = "va-breadcrumbs",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@vendasta/material/va-breadcrumbs",
  assets = [":va-breadcrumbs.component.css"] + glob(["**/*.html"]),
  deps = [
    "//src/lib/core",
  ],
  tsconfig = "//src/lib:tsconfig-build.json",
)

# TODO(jelbourn): replace this w/ sass_library when it supports acting like a filegroup
filegroup(
  name = "va_breadcrumbs_scss_partials",
  srcs = glob(["**/_*.scss"]),
)

sass_binary(
  name = "va_breadcrumbs_scss",
  src = "va-breadcrumbs.component.scss",
  deps = ["//src/lib/core:core_scss_lib"],
)

sass_library(
  name = "theme",
  srcs = glob(["**/*-theme.scss"]),
)
